--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,10 @@
         {
             "name": "Benchmark",
             "type": "debugpy",
-            "program": "benchmark/main.py",
+            "program": "scripts/main.py",
             "request": "launch",
             "console": "integratedTerminal",
-            "args": [
-            ],
+            "args": ["-b"],
             "justMyCode": true
         }
     ]
